--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -13,7 +13,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Your code here"
+                "# Your code here\n",
+                "import numpy as np # linear algebra\n",
+                "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+                "import seaborn as sns # Visualization\n",
+                "import matplotlib.pyplot as plt # Visualization\n",
+                "from colorama import Fore\n",
+                "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+                "import math\n",
+                "from datetime import datetime, date \n",
+                "\n"
             ]
         }
     ],
